--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+nobootloader (1.50) unstable; urgency=medium
+
+  [ Updated translations ]
+  * Tajik (tg.po) by Victor Ibragimov
+
+ -- Christian Perrier <bubulle@debian.org>  Mon, 22 Jan 2018 08:36:43 +0100
+
 nobootloader (1.49) unstable; urgency=medium
 
   [ Updated translations ]
