[l10n]  Commit changed/added files

--- a/debian/po/tg.po
+++ b/debian/po/tg.po
@@ -16,7 +16,7 @@ msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: nobootloader@packages.debian.org\n"
 "POT-Creation-Date: 2009-05-29 22:50+0000\n"
-"PO-Revision-Date: 2018-01-21 20:21+0500\n"
+"PO-Revision-Date: 2018-02-07 12:45+0500\n"
 "Last-Translator: Victor Ibragimov <victor.ibragimov@gmail.com>\n"
 "Language-Team: Tajik <victor.ibragimov@gmail.com>\n"
 "Language: tg\n"
@@ -87,7 +87,7 @@ msgstr ""
 "бояд дар нармафзори дарунсохти Genesi таъин карда шаванд.  Дар охири "
 "насбкунӣ низоми шумо бозоғозӣ мешавад.  Дар сатри фармони нармафзори "
 "дарунсохт барои фаъол кардани роҳандозии худкор тағйирёбандаҳои зеринро "
-"таъин кунед:"
+"таъин намоед:"
 
 #. Type: note
 #. Description
@@ -98,7 +98,7 @@ msgid ""
 "or reboot the system to proceed to your newly installed system."
 msgstr ""
 "Ба шумо иҷрои ин амал танҳо як маротиба лозим мешавад.  Баъдан, фармони "
-"\"boot\"-ро ворид кунед, ё ки низомро бозоғозӣ намоед, то ин ки ба низоми "
+"\"boot\"-ро ворид намоед, ё ки низомро бозоғозӣ намоед, то ин ки ба низоми "
 "насбшудаи нави худ гузаред."
 
 #. Type: note
@@ -109,8 +109,8 @@ msgid ""
 "Alternatively, you will be able to boot the kernel manually by entering, at "
 "the firmware prompt:"
 msgstr ""
-"Илова бар ин, шумо метавонед мағзро ба таври дастӣ роҳандозӣ кунед - барои "
-"ин дар сатри фармони миёнафзор зеринро ворид кунед:"
+"Илова бар ин, шумо метавонед мағзро ба таври дастӣ роҳандозӣ намоед - барои "
+"ин дар сатри фармони миёнафзор зеринро ворид намоед:"
 
 #. Type: note
 #. Description
@@ -124,7 +124,7 @@ msgstr ""
 "Барои ба таври худкор бор шудани низоми шумо, баъзе тағйирёбандаҳо бояд дар "
 "CFE таъин шуда бошанд. Дар охири насбкунӣ, низом бозоғозӣ мешавад. Дар сатри "
 "фармони нармафзори дарунсохт барои осон кардани роҳандозӣ тағйирёбандаҳои "
-"зеринро таъин кунед:"
+"зеринро таъин намоед:"
 
 #. Type: note
 #. Description
@@ -136,7 +136,7 @@ msgid ""
 msgstr ""
 "Ба шумо иҷрои ин амал танҳо як маротиба лозим мешавад. Ин ба шумо имкон "
 "медиҳад, ки танҳо фармони \"boot_debian\"-ро дар сатри фармони CFE иҷро "
-"кунед."
+"намоед."
 
 #. Type: note
 #. Description
@@ -148,7 +148,7 @@ msgid ""
 msgstr ""
 "Агар шумо хоҳед, ки ҳангоми ҳар як оғози кор роҳандозии худкор иҷро шавад, "
 "шумо метавонед ба ғайр аз тағйирёбандаҳои дар боло номбаршуда тағйирёбандаи "
-"зеринро таъин кунед:"
+"зеринро таъин намоед:"
 
 #. Type: note
 #. Description
@@ -177,4 +177,4 @@ msgid ""
 "${BOOT} and ${ROOT} passed as a kernel argument."
 msgstr ""
 "Ба шумо лозим мешавад, ки компютери худро ба таври дастӣ бо ҳастаи ${KERNEL} "
-"дар қисми диски ${BOOT}ва ${ROOT} ҳамчун аргументи ҳаста роҳандозӣ кунед."
+"дар қисми диски ${BOOT}ва ${ROOT} ҳамчун аргументи ҳаста роҳандозӣ намоед."
