--- a/debian/po/tg.po
+++ b/debian/po/tg.po
@@ -16,7 +16,7 @@ msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: nobootloader@packages.debian.org\n"
 "POT-Creation-Date: 2009-05-29 22:50+0000\n"
-"PO-Revision-Date: 2018-02-07 12:45+0500\n"
+"PO-Revision-Date: 2018-02-08 14:24+0500\n"
 "Last-Translator: Victor Ibragimov <victor.ibragimov@gmail.com>\n"
 "Language-Team: Tajik <victor.ibragimov@gmail.com>\n"
 "Language: tg\n"
@@ -61,7 +61,7 @@ msgstr ""
 #. :sl4:
 #: ../nobootloader.templates:2001
 msgid "Warning: Your system may be unbootable!"
-msgstr "Огоҳӣ: Эҳтимол аст, ки низоми шумо худроҳандозӣ немешавад!"
+msgstr "Огоҳӣ: Эҳтимол аст, ки низоми шумо худроҳандозӣ намешавад!"
 
 #. Type: note
 #. Description
