Update Vcs-{Browser,Git} to point to salsa (alioth's replacement).

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nobootloader (1.53) UNRELEASED; urgency=medium
+
+  * Update Vcs-{Browser,Git} to point to salsa (alioth's replacement).
+
+ -- Cyril Brulebois <kibi@debian.org>  Fri, 27 Apr 2018 03:43:03 +0200
+
 nobootloader (1.52) unstable; urgency=medium
 
   [ Updated translations ]
