--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nobootloader (1.54) UNRELEASED; urgency=medium
+
+  * Remove trailing whitespaces from changelog file, to fix lintian tag.
+
+ -- Holger Wansing <hwansing@mailbox.org>  Sun, 13 Jan 2019 17:33:12 +0100
+
 nobootloader (1.53) unstable; urgency=medium
 
   * Team upload
@@ -64,7 +70,7 @@ nobootloader (1.46) unstable; urgency=medium
 nobootloader (1.45) unstable; urgency=low
 
   [ Milan Kupcevic ]
-  * Run update-initramfs to include reduced set of modules, thus reduce 
+  * Run update-initramfs to include reduced set of modules, thus reduce
     vmlinuz size. (Closes: #782279)
 
  -- Christian Perrier <bubulle@debian.org>  Sat, 11 Apr 2015 08:20:18 +0200
@@ -447,7 +453,7 @@ nobootloader (1.21) unstable; urgency=low
   * Vietnamese (vi.po) by Clytie Siddall
   * Simplified Chinese (zh_CN.po) by Ming Hua
   * Traditional Chinese (zh_TW.po) by Tetralet
-  
+
  -- Otavio Salvador <otavio@debian.org>  Thu, 08 May 2008 13:29:49 -0300
 
 nobootloader (1.20) unstable; urgency=low
@@ -795,7 +801,7 @@ nobootloader (1.05) unstable; urgency=low
   * Update for rename of link_in_boot template, depend on new base-installer
     that contains the new one.
 
-  * Updated translations: 
+  * Updated translations:
     - German (de.po) by Holger Wansing
     - Lithuanian (lt.po) by Kęstutis Biliūnas
     - Dutch (nl.po) by Bart Cornelis
@@ -808,7 +814,7 @@ nobootloader (1.04) unstable; urgency=low
   * Colin Watson
     - Remove useless dependency on parted-udeb.
 
-  * Updated translations: 
+  * Updated translations:
     - Arabic (ar.po) by Ossama M. Khayat
     - Belarusian (be.po) by Andrei Darashenka
     - Catalan (ca.po) by Guillem Jover
@@ -844,7 +850,7 @@ nobootloader (1.03) unstable; urgency=low
 
   * Note that this includes fix(es) to substitution bugs in translated
     templates.
-  * Updated translations: 
+  * Updated translations:
     - Bulgarian (bg.po) by Ognyan Kulev
     - Bosnian (bs.po) by Safir Šećerović
     - Greek, Modern (1453-) (el.po) by Greek Translation Team
@@ -875,7 +881,7 @@ nobootloader (1.02) unstable; urgency=low
 
 nobootloader (1.01) unstable; urgency=low
 
-  * Updated translations: 
+  * Updated translations:
     - Bulgarian (bg.po) by Ognyan Kulev
     - Catalan (ca.po) by Jordi Mallach
     - Czech (cs.po) by Miroslav Kure
@@ -917,7 +923,7 @@ nobootloader (1.00) unstable; urgency=low
 
   * Joey Hess
     - Gratuitious version number bump.
-  * Updated translations: 
+  * Updated translations:
     - Arabic (ar.po) by Ossama M. Khayat
     - Bulgarian (bg.po) by Ognyan Kulev
     - Catalan (ca.po) by Jordi Mallach
