--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+nobootloader (1.55) unstable; urgency=medium
+  * Team upload
+
+  [ Updated translations ]
+  * Arabic (ar.po) by Yaron Shahrabani
+  * Hebrew (he.po) by Yaron Shahrabani
+  * Vietnamese (vi.po) by Trần Ngọc Quân
+
+ -- Holger Wansing <hwansing@mailbox.org>  Sun, 03 Mar 2019 12:59:01 +0100
+
 nobootloader (1.54) unstable; urgency=medium
   * Team upload
 
