--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+nobootloader (1.56) unstable; urgency=medium
+  * Team upload
+
+  [ Updated translations ]
+  * Indonesian (id.po) by Muhammad Rifqi Priyo Susanto
+
+ -- Holger Wansing <hwansing@mailbox.org>  Sun, 24 Mar 2019 19:21:40 +0100
+
 nobootloader (1.55) unstable; urgency=medium
   * Team upload
 
