--- a/debian/changelog
+++ b/debian/changelog
@@ -1,7 +1,7 @@
 nobootloader (1.57) UNRELEASED; urgency=medium
 
   * Remove Christian Perrier from Uploaders, with many thanks for all
-    his contributions over the years!
+    his contributions over the years! (Closes: #927508)
 
  -- Cyril Brulebois <kibi@debian.org>  Sat, 20 Apr 2019 22:36:57 +0200
 
