--- a/debian/po/bg.po
+++ b/debian/po/bg.po
@@ -34,7 +34,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: bg\n"
 "Report-Msgid-Bugs-To: nobootloader@packages.debian.org\n"
-"POT-Creation-Date: 2009-05-29 22:50+0000\n"
+"POT-Creation-Date: 2019-09-26 22:04+0000\n"
 "PO-Revision-Date: 2012-02-25 18:10+0200\n"
 "Last-Translator: Damyan Ivanov <dmn@debian.org>\n"
 "Language-Team: Български <dict@fsa-bg.org>\n"
@@ -47,6 +47,7 @@ msgstr ""
 #. Type: text
 #. Description
 #. Main menu item
+#. Translators: keep below 55 columns
 #. :sl1:
 #: ../nobootloader.templates:1001
 msgid "Continue without boot loader"
