--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,14 @@
 nobootloader (1.57) UNRELEASED; urgency=medium
 
+  [ Cyril Brulebois ]
   * Remove Christian Perrier from Uploaders, with many thanks for all
     his contributions over the years! (Closes: #927508)
 
- -- Cyril Brulebois <kibi@debian.org>  Sat, 20 Apr 2019 22:36:57 +0200
+  [ Holger Wansing ]
+  * Add comment for translators, to keep main menu entry below a 55 columns
+    limit. This updates all po|pot files.
+
+ -- Holger Wansing <hwansing@mailbox.org>  Fri, 27 Sep 2019 01:08:42 +0200
 
 nobootloader (1.56) unstable; urgency=medium
   * Team upload
