nobootloader: prepare for release version 1.57

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,6 @@
-nobootloader (1.57) UNRELEASED; urgency=medium
+nobootloader (1.57) unstable; urgency=medium
+
+  * Team upload
 
   [ Cyril Brulebois ]
   * Remove Christian Perrier from Uploaders, with many thanks for all
@@ -8,9 +10,14 @@ nobootloader (1.57) UNRELEASED; urgency=medium
   * Add comment for translators, to keep main menu entry below a 55 columns
     limit. This updates all po|pot files.
 
- -- Holger Wansing <hwansing@mailbox.org>  Fri, 27 Sep 2019 01:08:42 +0200
+  [ Updated translations ]
+  * Croatian (hr.po) by gogogogi
+  * Portuguese (pt.po) by Miguel Figueiredo
+
+ -- Holger Wansing <hwansing@mailbox.org>  Sun, 13 Oct 2019 21:50:03 +0200
 
 nobootloader (1.56) unstable; urgency=medium
+
   * Team upload
 
   [ Updated translations ]
@@ -19,6 +26,7 @@ nobootloader (1.56) unstable; urgency=medium
  -- Holger Wansing <hwansing@mailbox.org>  Sun, 24 Mar 2019 19:21:40 +0100
 
 nobootloader (1.55) unstable; urgency=medium
+
   * Team upload
 
   [ Updated translations ]
@@ -29,6 +37,7 @@ nobootloader (1.55) unstable; urgency=medium
  -- Holger Wansing <hwansing@mailbox.org>  Sun, 03 Mar 2019 12:59:01 +0100
 
 nobootloader (1.54) unstable; urgency=medium
+
   * Team upload
 
   * Remove trailing whitespaces from changelog file, to fix lintian tag.
