[l10n]  Commit changed/added po files (from l10n-sync run at dillon)

--- a/debian/po/he.po
+++ b/debian/po/he.po
@@ -28,7 +28,7 @@ msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: nobootloader@packages.debian.org\n"
 "POT-Creation-Date: 2019-09-26 22:04+0000\n"
-"PO-Revision-Date: 2019-02-28 22:08+0000\n"
+"PO-Revision-Date: 2020-01-25 21:22+0000\n"
 "Last-Translator: Yaron Shahrabani <sh.yaron@gmail.com>\n"
 "Language-Team: Hebrew (https://www.transifex.com/yaron/teams/79473/he/)\n"
 "Language: he\n"
@@ -170,7 +170,7 @@ msgid ""
 "No boot loader has been installed, either because you chose not to or "
 "because your specific architecture doesn't support a boot loader yet."
 msgstr ""
-"לא הותקן מנהל אתחול, או בגלל שבחרת לא להתקין, או כי אין מנהל אתחול "
+"לא הותקן מנהל אתחול, או בגלל שבחרת לא להתקין או כי אין מנהל אתחול "
 "לארכיטקטורה שלך."
 
 #. Type: note
